# object-detection

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml
object_detection/: __init__.py  __main__.py
object_detection/config/: __init__.py  base.py  config.py  root.py
object_detection/config/sections/: __init__.py  morphology.py  screen_capture.py  threshold.py
object_detection/gui/: MainWindow.py  __init__.py  config_item_widget.py  config_widget.py  main_window.py  pipeline_list_widget.py  video_controls_widget.py  video_widget.py
object_detection/pipeline/: __init__.py  background_subtract.py  bbox.py  create.py  dummy.py  grayscale.py  manager.py  opening.py  pipeline.py  screen_capture.py  source.py  subscription.py  threshold.py  video_playback.py  video_recording.py
