[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = "A script to detect moving objects within a stationary camera feed"
authors = ["Zach Deibert <zachdeibert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
