[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = "A script to detect moving objects within a stationary camera feed"
authors = ["Zach Deibert <zachdeibert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
PySide6 = "^6.8.0.1"
python = ">=3.9, <3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
