[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = "A script to detect moving objects within a stationary camera feed"
authors = ["Zach Deibert <zachdeibert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
araviq6 = "^2.1.1"
mss = "^9.0.2"
opencv-python = "^4.10.0.84"
pyqtdarktheme = "^2.1.0"
PySide6 = "==6.6.1"
python = ">=3.8, <3.12"
scikit-video = "^1.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
